--- a/public/css/shortcodes.css
+++ b/public/css/shortcodes.css
@@ -134,10 +134,10 @@
 	position: relative;
 	-webkit-background-size: cover;
 	   -moz-background-size: cover;
-	     -o-background-size: cover;
+	     -o-background-size: cover; 
 			background-size: cover;
 	-webkit-box-sizing: border-box;
-	   -moz-box-sizing: border-box;
+	   -moz-box-sizing: border-box; 
 		    box-sizing: border-box;
 }
 .sc_audio.sc_audio_info {
@@ -283,7 +283,7 @@ input[type="button"].sc_button_size_large {
 	position: relative;
 }
 .sc_blogger.sc_scroll_controls_type_top {
-	overflow: visible;
+	overflow: visible;	
 }
 .sc_blogger.sc_scroll_controls_type_top .sc_scroll_controls_wrap {
 	top: 0;
@@ -359,7 +359,7 @@ input[type="button"].sc_button_size_large {
 	content: none;
 }
 
-.sc_blogger.layout_date .sc_blogger_item .sc_blogger_date {
+.sc_blogger.layout_date .sc_blogger_item .sc_blogger_date { 
 	width: 78px;
 	height: 78px;
 	border: 1px solid #ddd;
@@ -393,7 +393,7 @@ input[type="button"].sc_button_size_large {
 }
 
 .sc_blogger.layout_date.sc_blogger_horizontal {
-	overflow: hidden;
+	overflow: hidden;	
 }
 .sc_blogger.layout_date.sc_blogger_horizontal .sc_blogger_item {
 	float: left;
@@ -409,7 +409,7 @@ input[type="button"].sc_button_size_large {
 .sc_blogger.layout_date.sc_blogger_vertical .sc_blogger_item + .sc_blogger_item {
 	padding-top: 2em;
 }
-.sc_blogger.layout_date.sc_blogger_vertical .sc_blogger_item .sc_blogger_date {
+.sc_blogger.layout_date.sc_blogger_vertical .sc_blogger_item .sc_blogger_date { 
 	float: left;
 }
 .sc_blogger.layout_date.sc_blogger_vertical .post_content {
@@ -422,7 +422,7 @@ input[type="button"].sc_button_size_large {
 	display:block;
 	clear:both;
 }
-.sc_blogger.layout_date.sc_blogger_vertical .sc_blogger_item .post_info {
+.sc_blogger.layout_date.sc_blogger_vertical .sc_blogger_item .post_info { 
 	margin: 0;
 }
 
@@ -535,7 +535,7 @@ input[type="button"].sc_button_size_large {
 	vertical-align:top;
 	position:relative;
 	padding-bottom:0;
-	white-space:nowrap;
+	white-space:nowrap; 
 }
 .sc_scroll_horizontal .sc_blogger .isotope_column_2,
 .sc_scroll_horizontal .sc_blogger .column-1_2,
@@ -1272,11 +1272,11 @@ input[type="button"].sc_button_size_large {
 	        box-sizing: content-box;
 }
 
-.sc_form .sc_form_button {
+.sc_form .sc_form_button { 
 	text-align:center;
 	margin: 2.5em 0 0;
 }
-.sc_form .sc_form_item.sc_form_button button {
+.sc_form .sc_form_item.sc_form_button button { 
 	background-color:transparent;
 	-webkit-transition: all ease .3s;
 	   -moz-transition: all ease .3s;
@@ -1359,7 +1359,7 @@ input[type="button"].sc_button_size_large {
 	font-weight:700;
 	height: 1.3542em;
 	line-height:1.3542em;
-
+	
 }
 .sc_countdown.sc_countdown_style_2 .sc_countdown_separator {
 	font-weight:300;
@@ -1401,16 +1401,16 @@ input[type="button"].sc_button_size_large {
 .sc_dropcaps.sc_dropcaps_style_2 .sc_dropcaps_item {
 	line-height:1.2em;
 	margin-top:7px;
-}
+} 
 .sc_dropcaps.sc_dropcaps_style_3 .sc_dropcaps_item {
 	line-height:1.2em;
 	margin-top:7px;
-}
+} 
 .sc_dropcaps.sc_dropcaps_style_4 .sc_dropcaps_item {
     line-height:1.1em;
     border: 2px solid #453e3c;
 	margin-top:7px;
-}
+} 
 
 
 
@@ -1617,7 +1617,7 @@ input[type="button"].sc_button_size_large {
 }
 .sc_icon_shape_square,
 .sc_icon_shape_round {
-	display:inline-block;
+	display:inline-block; 
 	padding: 4px;
 	text-align:center;
 	width: 1.2em;
@@ -1759,10 +1759,10 @@ figure figcaption,
 .sc_infobox.sc_infobox_iconed.sc_infobox_style_success:after,
 .sc_infobox.sc_infobox_style_success b { color: #009f3b; }
 .sc_infobox.sc_infobox_style_error {	background-color:#bc3131; }
-.sc_infobox.sc_infobox_style_result {	background-color:#385445; }
+.sc_infobox.sc_infobox_style_result {	background-color:#211f1e; }
 
 .sc_infobox b,
-.sc_infobox strong {
+.sc_infobox strong { 
 	font-weight: 600;
 }
 .sc_infobox p {
@@ -1983,7 +1983,7 @@ ul.sc_list_style_iconed {
 	right:0;
 	bottom:0;
 }
-.sc_parallax video.sc_video_bg {
+.sc_parallax video.sc_video_bg { 
 	opacity: 0;
 	filter: alpha(opacity=0);
 }
@@ -2404,7 +2404,7 @@ ul.sc_list_style_iconed {
 
 .sc_pan {
 	position:absolute;
-	width:100%;
+	width:100%; 
 	-webkit-box-sizing: border-box;
 	   -moz-box-sizing: border-box;
 	        box-sizing: border-box;
@@ -2446,7 +2446,7 @@ ul.sc_list_style_iconed {
 	margin:0;
 	line-height:1.5em;
 	text-transform:uppercase;
-	font-weight: bold;
+	font-weight: bold;	
 }
 .sc_recent_news_subtitle {
 	margin: 0;
@@ -2874,12 +2874,12 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
     left: 0;
     transform: translateY(-50%) translateX(0%);
 }
-.sc_services_style_services-5 .sc_service_container.sc_align_left .columns_wrap > .column-1_2 .sc_services_item,
+.sc_services_style_services-5 .sc_service_container.sc_align_left .columns_wrap > .column-1_2 .sc_services_item, 
 .sc_services_style_services-5 .sc_service_container.sc_align_left .columns_wrap > .column-1_2:nth-child(2n) .sc_services_item {
     margin-left: 0;
     margin-right: 0;
 }
-.sc_services_style_services-5 .sc_service_container.sc_align_left .sc_icon,
+.sc_services_style_services-5 .sc_service_container.sc_align_left .sc_icon, 
 .sc_services_style_services-5.sc_services_type_images .sc_service_container.sc_align_left .sc_services_item_featured {
     float: left;
     margin-right: 2.2857em;
@@ -2897,7 +2897,7 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
 	left: auto;
     transform: translateY(-50%) translateX(0%);
 }
-.sc_services_style_services-5 .sc_service_container.sc_align_right .columns_wrap > .column-1_2 .sc_services_item,
+.sc_services_style_services-5 .sc_service_container.sc_align_right .columns_wrap > .column-1_2 .sc_services_item, 
 .sc_services_style_services-5 .sc_service_container.sc_align_right .columns_wrap > .column-1_2:nth-child(2n) .sc_services_item {
     margin-left: 0;
     margin-right: 0;
@@ -2986,7 +2986,7 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
 .sc_skills_counter .sc_skills_item.sc_skills_style_2 .sc_skills_count {
 	font-weight: 400;
 }
-.sc_skills_counter .sc_skills_item.sc_skills_style_3 .sc_skills_count {
+.sc_skills_counter .sc_skills_item.sc_skills_style_3 .sc_skills_count { 
 	font-weight: 300;
 	color:#fff;
 	padding: 0 10px;
@@ -3003,8 +3003,8 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
 	position: absolute;
 	top: 0;
 	left: 0;
-    border-top: 1.3333em solid #fff;
-    border-right: 1.6667em solid transparent;
+    border-top: 1.3333em solid #fff; 
+    border-right: 1.6667em solid transparent;	
 	opacity: 0.2;
 	filter: alpha(opacity=20);
 }
@@ -3031,8 +3031,8 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
 	background-color: #000;
 	z-index: 1;
 	width: 100%;
-	height: 100%;
-	opacity: 0.1;
+	height: 100%;  
+	opacity: 0.1;			
 	filter: alpha(opacity=10);
 }
 .sc_skills_counter .sc_skills_item.sc_skills_style_4 .sc_skills_info .sc_skills_label {
@@ -3088,10 +3088,10 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
 .sc_skills_bar.sc_skills_vertical .sc_skills_columns .sc_skills_item .sc_skills_count {
 	width: 100%;
 	height: auto;
-	top: auto;
+	top: auto; 
 	bottom: 0;
 }
-.sc_skills_bar.sc_skills_vertical .sc_skills_columns .sc_skills_total {
+.sc_skills_bar.sc_skills_vertical .sc_skills_columns .sc_skills_total { 
 	text-align: center;
 	font-size: 1.25em;
 	width: 100%;
@@ -3101,7 +3101,7 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
 .sc_skills_bar.sc_skills_vertical .sc_skills_columns .sc_skills_column {
 	text-align:center;
 }
-.sc_skills_bar.sc_skills_horizontal .sc_skills_columns .sc_skills_info {
+.sc_skills_bar.sc_skills_horizontal .sc_skills_columns .sc_skills_info { 
 	margin-top: 0;
 }
 .sc_skills_bar.sc_skills_horizontal .sc_skills_total {
@@ -3203,7 +3203,7 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
     -moz-transition: height ease .5s;
      -ms-transition: height ease .5s;
       -o-transition: height ease .5s;
-         transition: height ease .5s;
+         transition: height ease .5s; 
 }
 .sc_slider_swiper {
 	position: relative;
@@ -3225,7 +3225,7 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
 	background-repeat:no-repeat;
 
 /*	Not work in IE9
-	position: absolute;
+	position: absolute; 
 */
 
 /*	Work in IE9 */
@@ -4000,7 +4000,7 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
 }
 .sc_team_item .sc_team_item_info .sc_team_item_position {
 	margin-top:0.5em;
-	color: #8c7b57;
+	color: #ecb881;
     font-size: 12px;
     font-weight: 500;
     line-height: 14px;
@@ -4348,9 +4348,9 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
 }
 
 /* Divider */
-.sc_title_divider {
-	position:relative;
-	padding-left: 5ex;
+.sc_title_divider { 
+	position:relative; 
+	padding-left: 5ex; 
 	padding-right: 5ex;
 	text-align:center;
 }
@@ -4786,7 +4786,7 @@ body.sidebar_hide .sc_recent_news_style_news-announce .post_size_small { height:
 	        transform: none;
 	filter: alpha(opacity=100);
 }
-@-moz-document url-prefix() {
+@-moz-document url-prefix() { 
 	.sc_slider_controls_bottom .sc_slider_controls_wrap a {
 		line-height: 44px
 	}
