--- a/public/css/style.css
+++ b/public/css/style.css
@@ -293,10 +293,10 @@ button, input, optgroup, select, textarea {
 	vertical-align: baseline;	/* Improves appearance and consistency in all browsers */
 }
 button, input {
-	line-height: normal;
+	line-height: normal;	
 }
 button {
-	overflow: visible;
+	overflow: visible; 
 }
 button,
 input[type="button"],
@@ -371,7 +371,7 @@ textarea {
 	        transition: all ease .3s;
 }
 
-button::-moz-focus-inner {
+button::-moz-focus-inner { 
 	border: 0;
 }
 button:focus,
@@ -493,7 +493,7 @@ label.required:after {
 	position:relative;
 }
 .sticky .sticky_label {
-	position:absolute;
+	position:absolute; 
 	right:0;
 	top: 0;
 	width:3em;
@@ -2069,7 +2069,7 @@ li.opened > a > .open_child_menu:before {
 	text-align:left;
 	-webkit-box-shadow: -4px 3px 0px 0px rgba(0, 0, 0, 0.2);
 	   -moz-box-shadow: -4px 3px 0px 0px rgba(0, 0, 0, 0.2);
-			box-shadow: -4px 3px 0px 0px rgba(0, 0, 0, 0.2);
+			box-shadow: -4px 3px 0px 0px rgba(0, 0, 0, 0.2);	
 }
 .top_panel_top .search_results {
 	top:2.65em;
@@ -2401,19 +2401,19 @@ li.opened > a > .open_child_menu:before {
 }
 .tparrows.default {
 /* 	display: none; */	/* Remove this row if you want display slides navigation arrows */
-	background:none;
-	background-color:transparent;
-	line-height:40px;
+	background:none; 
+	background-color:transparent; 
+	line-height:40px; 
 }
-.tparrows.default:before {
-	font-family: "fontello";
-	font-size:3em;
+.tparrows.default:before { 
+	font-family: "fontello"; 
+	font-size:3em; 
 }
-.tp-leftarrow.default:before {
-	content: '\e837';
+.tp-leftarrow.default:before { 
+	content: '\e837'; 
 }
-.tp-rightarrow.default:before {
-	content: '\e836';
+.tp-rightarrow.default:before { 
+	content: '\e836'; 
 }
 .tp-bullets.simplebullets.round .bullet {
 	background:none;
@@ -2491,7 +2491,7 @@ li.opened > a > .open_child_menu:before {
 .breadcrumbs .breadcrumbs_item {
 	display:inline-block;
 	vertical-align:top;
-	white-space:nowrap;
+	white-space:nowrap; 
 }
 .post_navi .post_navi_delimiter,
 .breadcrumbs .breadcrumbs_delimiter {
@@ -3006,7 +3006,7 @@ blockquote cite {
 
 /* Isotope transitions */
 .isotope-hidden.isotope_item {
-	pointer-events: none;
+	pointer-events: none; 
 	z-index: 1;
 }
 
@@ -3015,7 +3015,7 @@ blockquote cite {
 .isotope_item_colored .post_featured .post_mark_new {
 	-webkit-box-shadow: -3px 2px 0px 0px rgba(0, 0, 0, 0.2);
 	   -moz-box-shadow: -3px 2px 0px 0px rgba(0, 0, 0, 0.2);
-			box-shadow: -3px 2px 0px 0px rgba(0, 0, 0, 0.2);
+			box-shadow: -3px 2px 0px 0px rgba(0, 0, 0, 0.2);	
 }
 .post_item_colored .post_featured .post_mark_new {
 	position:absolute;
@@ -3166,7 +3166,7 @@ blockquote cite {
 	padding-right: 2em;
 }
 .isotope_wrap .isotope_item.isotope_item_colored_1 .post_title {
-	margin-top: 0.8em;
+	margin-top: 0.8em; 
 	margin-bottom: 0.25em;
 }
 .isotope_wrap .isotope_item.isotope_item_colored_1 .post_descr {
@@ -3437,29 +3437,29 @@ blockquote cite {
 }
 @-webkit-keyframes rotateplane {
 	0% {
-		-webkit-transform: perspective(120px);
+		-webkit-transform: perspective(120px); 
 				transform: perspective(120px);
 	}
 	50% {
-		-webkit-transform: perspective(120px) rotateY(180deg);
+		-webkit-transform: perspective(120px) rotateY(180deg); 
 				transform: perspective(120px) rotateY(180deg);
 	}
 	100% {
-		-webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg);
+		-webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg); 
 				transform: perspective(120px) rotateY(180deg) rotateX(180deg);
 	}
 }
 @keyframes rotateplane {
 	0% {
-		-webkit-transform: perspective(120px);
+		-webkit-transform: perspective(120px); 
 				transform: perspective(120px);
 	}
 	50% {
-		-webkit-transform: perspective(120px) rotateY(180deg);
+		-webkit-transform: perspective(120px) rotateY(180deg); 
 				transform: perspective(120px) rotateY(180deg);
 	}
 	100% {
-		-webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg);
+		-webkit-transform: perspective(120px) rotateY(180deg) rotateX(180deg); 
 				transform: perspective(120px) rotateY(180deg) rotateX(180deg);
 	}
 }
@@ -3521,7 +3521,7 @@ blockquote cite {
 	opacity: 0;
 	filter: alpha(opacity=0);
 }
-.post_featured .post_nav:hover .post_nav_item:before {
+.post_featured .post_nav:hover .post_nav_item:before { 
 	opacity: 1;
 	filter: alpha(opacity=100);
 }
@@ -3602,11 +3602,11 @@ blockquote cite {
 /* 8.2 Reviews block
 -------------------------------------------------------------- */
 
-.reviews_block {
+.reviews_block { 
 	width: 270px;
 	overflow: hidden;
 }
-.widget_area .reviews_block {
+.widget_area .reviews_block { 
 	width: 100%;
 }
 .reviews_block .sc_tabs_content {
@@ -3639,12 +3639,12 @@ blockquote cite {
 	text-align:center;
 	display:none;
 }
-.reviews_block .reviews_item {
+.reviews_block .reviews_item { 
 	white-space:nowrap;
 	padding:0.3em 0;
 }
 .reviews_block .reviews_criteria,
-.reviews_block .reviews_stars {
+.reviews_block .reviews_stars { 
 	display: inline-block;
 	vertical-align:top;
 }
@@ -3744,13 +3744,13 @@ blockquote cite {
 .reviews_star {
 	display: inline-block;
 	margin: 0;
-	padding: 0;
+	padding: 0; 
 	font-size: 1.125em;
-	vertical-align: top;
-}
+	vertical-align: top; 
+} 
 .reviews_max_level_10 .reviews_star {
 	font-size: 0.875em;
-}
+} 
 .reviews_star:before {
 	content: '\e8c8';
 	font-family: "fontello";
@@ -3976,12 +3976,12 @@ blockquote cite {
 	padding-bottom:0.8em;
 }
 .comments_list > li.trackback p a { font-style:normal; }
-.comments_list > li.trackback .edit-link {
+.comments_list > li.trackback .edit-link { 
 	position:absolute;
 	right:0;
 	top: 0;
 }
-.comments_list > li+li.trackback .edit-link {
+.comments_list > li+li.trackback .edit-link { 
 	margin-top: 1.25em;
 }
 
@@ -4126,7 +4126,7 @@ blockquote cite {
 .comments_form_wrap {
 	padding-bottom:4px;		/* To show shadow under button */
 }
-.comments_wrap .form-submit {
+.comments_wrap .form-submit { 
 	text-align:center;
 	margin:1em 0 0;
 	padding:0;
@@ -4456,7 +4456,7 @@ blockquote cite {
 .widget_area .sc_tabs.sc_tabs_style_2 .sc_tabs_content {
 	-webkit-border-radius: 0;
 	   -moz-border-radius: 0;
-			border-radius: 0;
+			border-radius: 0;	
 }
 
 
@@ -4800,7 +4800,7 @@ footer.twitter_wrap .sc_section_overlay {
 	   -moz-transition: all 0.3s ease-out;
 	    -ms-transition: all 0.3s ease-out;
 	     -o-transition: all 0.3s ease-out;
-	        transition: all 0.3s ease-out;
+	        transition: all 0.3s ease-out; 
 }
 #toc.toc_fixed .toc_inner,
 #toc:hover .toc_inner {
@@ -4867,7 +4867,7 @@ footer.twitter_wrap .sc_section_overlay {
 	   -moz-transition: all 0.3s ease-out;
 	    -ms-transition: all 0.3s ease-out;
 	     -o-transition: all 0.3s ease-out;
-	        transition: all 0.3s ease-out;
+	        transition: all 0.3s ease-out; 
 }
 #toc .toc_item:hover .toc_description {
 	right:68px;
@@ -4886,7 +4886,7 @@ footer.twitter_wrap .sc_section_overlay {
 	border-color:transparent;
 	border-left-color: rgba(128,128,128,0.8);
 	border-width: 8px;
-	margin-top: -8px;
+	margin-top: -8px; 
 }
 
 
@@ -5010,8 +5010,8 @@ footer.twitter_wrap .sc_section_overlay {
 	color:#ffffff;
 	overflow:auto;
 }
-.admin-bar #debug_log {
-	top:32px;
+.admin-bar #debug_log { 
+	top:32px; 
 }
 #debug_log_close {
 	position:absolute;
@@ -5066,7 +5066,7 @@ footer.twitter_wrap .sc_section_overlay {
 	display:none;
 	-webkit-box-shadow: -4px 3px 0px 0px rgba(0, 0, 0, 0.2);
 	   -moz-box-shadow: -4px 3px 0px 0px rgba(0, 0, 0, 0.2);
-			box-shadow: -4px 3px 0px 0px rgba(0, 0, 0, 0.2);
+			box-shadow: -4px 3px 0px 0px rgba(0, 0, 0, 0.2);	
 }
 .popup_wrap input[type="text"],
 .popup_wrap input[type="email"],
@@ -5121,7 +5121,7 @@ footer.twitter_wrap .sc_section_overlay {
 	        transform:translateX(-50%) translateY(-50%);
 	-webkit-box-shadow: -4px 3px 5px 0px rgba(0, 0, 0, 0.2);
 	   -moz-box-shadow: -4px 3px 5px 0px rgba(0, 0, 0, 0.2);
-			box-shadow: -4px 3px 5px 0px rgba(0, 0, 0, 0.2);
+			box-shadow: -4px 3px 5px 0px rgba(0, 0, 0, 0.2);	
 }
 .popup_wrap .form_wrap .result p {
 	line-height:1.5em;
@@ -5236,7 +5236,7 @@ footer.twitter_wrap .sc_section_overlay {
 .mejs-controls button:active { background-color:transparent !important; }
 .mejs-controls button:after { display: none; }
 
-/* 13.2 Magnific popup
+/* 13.2 Magnific popup 
 -------------------------------------------------------- */
 .mfp-figure figcaption {
 	margin-bottom:40px ;
@@ -5252,12 +5252,12 @@ footer.twitter_wrap .sc_section_overlay {
 }
 
 
-/* 13.3 Google conversion
+/* 13.3 Google conversion 
 ---------------------------------------------------------- */
 iframe[name="google_conversion_frame"] { height:1px; min-height:0px; display:none; }
 
 
-/* 13.4 Visual Composer
+/* 13.4 Visual Composer 
 -------------------------------------------------------- */
 .wpb_row,
 .wpb_text_column,
@@ -5341,10 +5341,10 @@ h1 .wpb_text_column p, h2 .wpb_text_column p, h3 .wpb_text_column p, h4 .wpb_tex
 .bg_image_2 { background: url(images/bg/image_2.jpg) 50% 0% repeat-y fixed ; }
 .bg_image_3 { background: url(images/bg/image_3.jpg) 50% 0% repeat-y fixed ; }
 .bg_image_1, .bg_image_2, .bg_image_3 {
-	-webkit-background-size: 100% auto;
+	-webkit-background-size: 100% auto; 
 	   -moz-background-size: 100% auto;
-	     -o-background-size: 100% auto;
-			background-size: 100% auto;
+	     -o-background-size: 100% auto; 
+			background-size: 100% auto; 
 }
 
 .accent_top:before  {
@@ -5757,12 +5757,12 @@ body #booked-profile-page input[type="submit"], body #booked-profile-page button
 
 
 /* ess grid */
-.minimal-light .esg-filterbutton, .minimal-light .esg-navigationbutton,
+.minimal-light .esg-filterbutton, .minimal-light .esg-navigationbutton, 
 .minimal-light .esg-sortbutton, .minimal-light .esg-cartbutton a {
     background: #fff;
     border: none ;
     border-radius: 0 ;
-    color: #8c7b57 ;
+    color: #ecb881 ;
     font-size: 12px ;
     font-weight: 400 ;
     line-height: 16px ;
@@ -5791,7 +5791,7 @@ body #booked-profile-page input[type="submit"], body #booked-profile-page button
     border-radius: 50%;
 }
 .tp-bullet.selected, .tp-bullet:hover {
-    background: #8c7b57;
+    background: #ecb881;
 }
 
 
